--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "antd": "^3.26.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-fetch": "latest",
     "pg-promise": "^10.3.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -12,9 +14,8 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
-    "typescript": "^3.7.2",
-    "node-fetch": "latest",
-    "request": "latest"
+    "request": "latest",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
